--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,15 @@
 
 apply from: 'config/dependencies.gradle'
 buildscript {
+    ext.kotlin_version = '1.1.2-2'
+    ext.anko_version = '0.10.0'
     repositories {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.4"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.0.4"
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
